# bag-agents

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  QUICKSTART.md  QUICK_START.md  QUICK_TEST.md  RAILWAY_DEPLOYMENT.md  README.md  TESTING_GUIDE.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  start.sh
agents/: __init__.py  base_agent.py  compensation_agent.py  customer_service_agent.py  demand_forecast_agent.py  infrastructure_health_agent.py  orchestrator_agent.py  prediction_agent.py  root_cause_agent.py  route_optimization_agent.py
api/: __init__.py  main.py  orchestrator_routes.py
auth/: rbac.py  supabase_auth.py
baggage_workflows/: event_system.py  state_graph.py  state_persistence.py  workflows.py
clients/: airline_client.py  bag_client.py
dashboard/: README.md  package-lock.json  package.json  vercel.json
dashboard/app/: layout.tsx
dashboard/app/(dashboard)/: layout.tsx
dashboard/app/(dashboard)/dashboard/: page.tsx
dashboard/app/(dashboard)/flights/: page.tsx
dashboard/components/dashboard/: kpi-card.tsx
dashboard/components/layout/: sidebar.tsx
dashboard/lib/: api-client.ts  supabase.ts  types.ts  websocket-client.ts
dashboard/providers/: theme-provider.tsx
demo/copa/: README.md  SYSTEM_CONTEXT.md
demo/copa/data/: Copa_bags_demo.json  Copa_demo_scenarios.json  Copa_flights_demo.json
demo/copa/scripts/: generate_bags.py  generate_flights.py
docs/: API_GATEWAY.md  COPA_INTEGRATION.md  LLM_CONTEXT.md  ORCHESTRATOR.md
examples/: orchestrator_demo.py
gateway/: logging_middleware.py  main.py  rate_limiter.py  router.py
integrations/: __init__.py  config.py  copa_demo_script.py  data_mapper.py  integration_service.py  mock_copa_data.py
integrations/copa/: __init__.py  bhs_adapter.py  dcs_adapter.py  flight_ops_adapter.py
langgraph/: __init__.py  baggage_orchestrator.py  orchestrator_state.py
migrations/: 001_create_schema.sql  002_seed_demo_data.sql  README.md
models/: __init__.py
models/demand_forecaster/: __init__.py
models/mishandling_predictor/: __init__.py
scripts/: init-db.sql
shared/: contracts.py
tests/: README.md  TEST_REPORT.md  __init__.py  conftest.py  test_api.py  test_base_agent.py  test_gateway.py  test_orchestrator.py  test_prediction_agent.py  test_utils.py
tests/fixtures/: copa_airport_graph.cypher  copa_bag_data.json  copa_flight_schedule.json
tests/integration/: __init__.py  conftest.py  test_agent_orchestration.py  test_connection_success.py  test_copa_scenarios.py  test_equipment_failure.py  test_happy_path.py  test_mishandling_flow.py
tests/load/: __init__.py  conftest.py  test_concurrent_bags.py  test_peak_operations.py
utils/: __init__.py  database.py  llm.py  monitoring.py
webhooks/: webhook_registry.py
(+1 files in other folders)
